cabal-version:      3.0
name:               advent-of-code2022-hs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Burak Güner
maintainer:         md.burak.guner@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day1
    import:           warnings
    main-is:          day1.hs
    build-depends:    base ^>=4.18.0.0, split >=0.2.3.5
    hs-source-dirs:   days/day1
    default-language: Haskell2010

executable day2
    import:           warnings
    main-is:          day2.hs
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   days/day2
    default-language: Haskell2010

executable day3
    import:           warnings
    main-is:          day3.hs
    build-depends:    base ^>=4.18.0.0, containers ^>=0.6.7, split >=0.2.3.5
    hs-source-dirs:   days/day3
    default-language: Haskell2010
